--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>element-starter</title>
+    <meta charset="utf-8">
+    <title>element-starter</title>
+    <script>
+
+
+    </script>
 </head>
 
 <body>
-  <div id="app"></div>
+<div id="app"></div>
 </body>
 
 </html>
